src/tui/tests/snapshots/dispatch_tui__tui__tests__snapshots__snapshot_reparent_epic_popup.snap
---
source: src/tui/tests/snapshots.rs
expression: rendered
---
                                                                                                                  🔕  [N]
        ▸ BACKLOG 4 [ ]                 ◦ RUNNING 0                   ◦ REVIEW 0                     ◦ DONE 0
──────────────────────────────╭ Reparent epic: "Platform" ───────────────────────────────╮──────────────────────────────
 ╭──────────────────────────╮ │  — no parent —                                           │
 │  ▎ #1 Task 1             │ │  Backend                                                 │
 │   ◦ <1h                  │ │  Frontend                                                │
 ╰──────────────────────────╯ │                                                          │
 ╭──────────────────────────╮ │                                                          │
 │  ▎ #10 Platform          │ │                                                          │
 │    no subtasks           │ │                                                          │
 ╰──────────────────────────╯ │                                                          │
 ╭──────────────────────────╮ │                                                          │
 │  ▎ #20 Backend           │ │                                                          │
 │    no subtasks           │ │                                                          │
 ╰──────────────────────────╯ │                                                          │
 ╭──────────────────────────╮ │                                                          │
 │  ▎ #30 Frontend          │ │                                                          │
 │    no subtasks           │ │                                                          │
 ╰──────────────────────────╯ │                                                          │
                              │                                                          │
                              │                                                          │
                              │                                                          │
                              │                                                          │
                              │                                                          │
                              │                                                          │
                              │                                                          │
                              │                                                          │
                              │                                                          │
                              │                                                          │
                              │                                                          │
                              │                                                          │
──────────────────────────────│                                                          │──────────────────────────────
                              │                                                          │
                              │                                                          │
                              │                                                          │
                              │                                                          │
                              │ j/k:navigate  l/Space/→:expand  h/←:collapse  Enter:selec│
                              ╰──────────────────────────────────────────────────────────╯

Select new parent: navigate tree above, Enter to select
