src/tui/tests/snapshots/dispatch_tui__tui__tests__snapshots__snapshot_repo_filter_popup_cursor_on_repo.snap
---
source: src/tui/tests/snapshots.rs
expression: rendered
---
                                                                                                                  🔕  [N]
        ▸ BACKLOG 2 [ ]                ◦ RUNNING 1                   ◦ REVIEW 0                      ◦ DONE 1
──────────────────────────────│───────────────────────────│──────────────────────────────│──────────────────────────────
 ╭──────────────────────────╮ │  ── active                │                              │ ╭──────────────────────────╮
 │  ▎ #1 Task 1             │ │ ╭───────────────────────╮ │                              │ │  ▎ #4 Task 4             │
 │   ◦ <1h                  │ │ │  ▎ #3 Task 3          │ │                              │ │   ✓ <1h                  │
 ╰──────────────────────────╯ │ │   ◉ running           │ │                              │ ╰──────────────────────────╯
 ╭──────────────────────────╮ │ ╰───────────────────────╯ │                              │
 │  ▎ #2 Task 2             │ │                           │                              │
 │   ◦ <1h                  │ │                           │                              │
 ╰──────────────────────────╯ │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              ╔ Repo Filter (include) ═══════════════════════════════════╗
                              ║                                                          ║
                              ║    [ ] Active sessions only                              ║
                              ║  ► [ ] /home/user/projects/alpha                         ║
                              ║  2. [ ] /home/user/projects/beta                         ║
                              ║  3. [ ] /home/user/projects/gamma                        ║
                              ║                                                          ║
                              ║  [j/k] navigate  [Space] toggle  [a] select all          ║
                              ║  [Tab] incl/excl  [s] save preset  [x] del preset  [q/Esc║
                              ╚══════════════════════════════════════════════════════════╝
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
Filter repos: [1-9] toggle  [a] all  [q/Esc] close
