src/tui/tests/snapshots/dispatch_tui__tui__tests__snapshots__snapshot_scroll_indicator_down.snap
---
source: src/tui/tests/snapshots.rs
expression: rendered
---
                                                                                                                  🔕  [N]
        ▸ BACKLOG 5 [ ]                 ◦ RUNNING 0                   ◦ REVIEW 0                     ◦ DONE 0
──────────────────────────────│───────────────────────────│──────────────────────────────│──────────────────────────────
 ╭──────────────────────────╮ │                           │                              │
 │  ▎ #1 Task 1             │ │                           │                              │
 │   ◦ <1h                  │ │                           │                              │
 ╰──────────────────────────╯ │                           │                              │
 ╭──────────────────────────╮ │                           │                              │
 │  ▎ #2 Task 2             │ │                           │                              │
 │   ◦ <1h                  │ │                           │                              │
 ╰──────────────────────────╯▼│                           │                              │
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────







[Space] brainstorm  [e]dit  [L] move  [x] done  [Enter] detail  [c]opy  [a] select all  [n]ew  [E]pic  [D] quick  [s]pli
