src/tui/tests/snapshots/dispatch_tui__tui__tests__snapshots__snapshot_scroll_indicator_up.snap
---
source: src/tui/tests/snapshots.rs
expression: rendered
---
                                                                                                                  🔕  [N]
        ▸ BACKLOG 5 [ ]                ◦ RUNNING 0                   ◦ REVIEW 0                      ◦ DONE 0
─────────────────────────────▲│───────────────────────────│──────────────────────────────│──────────────────────────────
 ╭──────────────────────────╮ │                           │                              │
 │  ▎ #4 Task 4             │ │                           │                              │
 │   ◦ <1h                  │ │                           │                              │
 ╰──────────────────────────╯ │                           │                              │
 ╭──────────────────────────╮ │                           │                              │
 │  ▎ #5 Task 5             │ │                           │                              │
 │   ◦ <1h                  │ │                           │                              │
 ╰──────────────────────────╯ │                           │                              │
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────







[Space] dispatch  [e]dit  [L] move  [x] done  [Enter] detail  [c]opy  [a] select all  [n]ew  [E]pic  [D] quick  [s]plit
