src/tui/tests/snapshots/dispatch_tui__tui__tests__snapshots__snapshot_task_detail_overlay_empty_optional_fields.snap
---
source: src/tui/tests/snapshots.rs
expression: rendered
---
                                                                                                                  🔕  [N]
        ▸ BACKLOG 1 [ ]                ◦ RUNNING 0                   ◦ REVIEW 0                      ◦ DONE 0
──────────────────────────────│───────────────────────────│──────────────────────────────│──────────────────────────────
 ╭──────────────────────────╮ │                           │                              │
 │  ▎ #1 Task 1             │ │                           │                              │
 │   ◦ <1h                  │ │                           │                              │
 ╰──────────────────────────╯ │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
╭ Task #1 ─────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│Repo:  /repo/path                                                                                                     │
│──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│
│Just a description.                                                                                                   │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
╰ j/k scroll · z zoom · q/Esc/Enter close ─────────────────────────────────────────────────────────────────────────────╯
[Space] dispatch  [e]dit  [L] move  [x] done  [Enter] detail  [c]opy  [a] select all  [n]ew  [E]pic  [D] quick  [s]plit
