src/tui/tests/snapshots/dispatch_tui__tui__tests__snapshots__snapshot_task_detail_overlay_peek.snap
---
source: src/tui/tests/snapshots.rs
expression: rendered
---
                                                                                                                  🔕  [N]
        ▸ BACKLOG 1 [ ]                 ◦ RUNNING 0                   ◦ REVIEW 0                     ◦ DONE 0
──────────────────────────────│───────────────────────────│──────────────────────────────│──────────────────────────────
 ╭──────────────────────────╮ │                           │                              │
 │  ▎ #1 Task 1             │ │                           │                              │
 │   ◦ <1h                  │ │                           │                              │
 ╰──────────────────────────╯ │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
╭ Task #1 ─────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│Repo:  /repo/my-project                                                                                               │
│PR:    https://github.com/org/repo/pull/42                                                                            │
│──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│
│First line of description.                                                                                            │
│Second line.                                                                                                          │
│Third line.                                                                                                           │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
╰ j/k scroll · z zoom · q/Esc/Enter close ─────────────────────────────────────────────────────────────────────────────╯
[Space] brainstorm  [e]dit  [L] move  [x] done  [p] open URL  [Enter] detail  [c]opy  [a] select all  [n]ew  [E]pic  [D]
